# SDIS

./: .coverage
CW/problem-solver/cxx/: CMakeLists.txt
CW/problem-solver/cxx/ambulance_module/: CMakeLists.txt  ambulance_module.cpp  ambulance_module.hpp  ambulance_placement_module.cpp
CW/problem-solver/cxx/ambulance_module/agents/: accessibility_analyzer.cpp  accessibility_analyzer.hpp  calculate_distances_agent.cpp  find_center_agent.cpp  find_optimal_agent.cpp  find_optimal_agent.hpp  find_problem_zones_agent.cpp  find_problem_zones_agent.hpp  graph_center_locator.cpp  station_location_optimizer.cpp  village_distance_colculator.cpp  village_distance_colculator.hpp
CW/problem-solver/cxx/ambulance_module/keynodes/: ambulance_keynodes.hpp  emergency_service_concepts.hpp
CW/problem-solver/cxx/ambulance_module/test/: ambulance_tests.cpp
CW/subject_domain_of_ambulance_station/: subject_domain_of_ambulance_station.scs
CW/subject_domain_of_ambulance_station/actions/: action_calculate_distances.scs  action_find_graph_center.scs  action_find_optimal_station.scs  action_find_problem_zones.scs
CW/subject_domain_of_ambulance_station/entities/: village_central.scs  village_eastern.scs  village_lesnaya.scs  village_northern.scs  village_polevaya.scs  village_rechnaya.scs  village_southern.scs  village_western.scs
Exceptions/: FinanceException.h  ProductionException.h  QualityExceptionh.h
FactoryProject/: README.md
FactoryProject/Classes/Core/: AuditLog.cpp  AuditLog.h  Department.cpp  Department.h  Employee.cpp  Employee.h  Factory.cpp  Factory.h  Role.h  Schedule.cpp  Schedule.h  Shift.cpp  Shift.h
FactoryProject/Classes/Finance/: Budget.cpp  Budget.h  Invoice.cpp  Invoice.h  Payroll.cpp  Payroll.h  Transaction.cpp  Transaction.h
FactoryProject/Classes/Inventory/: InventoryItem.cpp  InventoryItem.h  PurchaseOrder.cpp  PurchaseOrder.h  RowMaterial.cpp  RowMaterial.h  Supplier.cpp  Supplier.h  Warehouse.cpp  Warehouse.h
FactoryProject/Classes/Maintenance/: MaintenanceRequest.cpp  MaintenanceRequest.h  MaintenanceSchedule.cpp  MaintenanceSchedule.h  SparePart.cpp  SparePart.h
FactoryProject/Classes/Production/: AssemblyStep.cpp  AssemblyStep.h  Machine.cpp  Machine.h  Product.cpp  Product.h  ProductionLine.cpp  ProductionLine.h  WorkOrder.cpp  WorkOrder.h
FactoryProject/Classes/Quality/: Defect.cpp  Defect.h  QualityCheck.cpp  QualityCheck.h  QualityStandard.cpp  QualityStandard.h  TestProcedure.cpp  TestProcedure.h
FactoryProject/Classes/Safety/: SafetyIncident.cpp  SafetyIncident.h  SafetyTrainig.cpp  SafetyTraining.h  SafetyTrainnig.cpp
FactoryProject/Classes/Shipping/: Carrier.cpp  Carrier.h  DeliveryOrder.cpp  DeliveryOrder.h  Shipment.cpp  Shipment.h
FactoryProject/Exceptions/: ComplianceException.h  FactoryException.h  InventoryException.h  MaintenanceException.h  PayrollException.h  SafetyException.h  ShippingException.h
FactoryProject/Interfaces/: IReportable.h  ITrackable.h  IValidatable.h
FactoryProject/Tests/: test_addisional.cpp  test_core.cpp  test_finance.cpp  test_helpers.h  test_inventory.cpp  test_main.cpp  test_production.cpp  test_safety.cpp  test_shipping.cpp
FactoryProject/Utils/: DateTimeUtils.cpp  DateTimeUtils.h  IDGenerator.cpp  IDGenerator.h  Logger.cpp  Logger.h  Validator.cpp  Validator.h
HotelProject/: README.md
HotelProject/include/: amenity.h  analytics.h  booking.h  channelmanager.h  commission.h  concierge.h  deposit.h  employee.h  event.h  exceptions.h  facility.h  feedback.h  frontdesk.h  guest.h  hotel.h  housekeeping.h  interfaces.h  inventory.h  invoice.h  keycard.h  lostfound.h  loyaltyprogram.h  maintenance.h  menuitem.h  nightaudit.h  notification.h  order.h  package.h  parking.h  payment.h  penalty.h  rateplan.h  refund.h  report.h  restaurant.h  review.h  room.h  security.h  service.h  specialoffer.h  (+8 more)
HotelProject/src/: amenity.cpp  analytics.cpp  booking.cpp  channelmanager.cpp  commission.cpp  concierge.cpp  deposit.cpp  employee.cpp  event.cpp  facility.cpp  feedback.cpp  frontdesk.cpp  guest.cpp  hotel.cpp  housekeeping.cpp  inventory.cpp  invoice.cpp  keycard.cpp  lostfound.cpp  loyaltyprogram.cpp  maintenance.cpp  menuitem.cpp  nightaudit.cpp  notification.cpp  order.cpp  package.cpp  parking.cpp  payment.cpp  penalty.cpp  rateplan.cpp  refund.cpp  report.cpp  restaurant.cpp  review.cpp  room.cpp  security.cpp  service.cpp  specialoffer.cpp  tax.cpp  transportation.cpp  (+5 more)
HotelProject/tests/: main.cpp  tast_maintenance.cpp  test_amenity.cpp  test_analytics.cpp  test_booking.cpp  test_commission.cpp  test_deposit.cpp  test_employee.cpp  test_event.cpp  test_facility.cpp  test_frontdesk.cpp  test_guest.cpp  test_helpers.h  test_hotel.cpp  test_housekeeping.cpp  test_invoice.cpp  test_keycard.cpp  test_payment.cpp  test_room.cpp  test_service.cpp
Lab2_Sem4/: .coverage  .coveragerc  README.md  requirements.txt
Lab2_Sem4/app/: main.py
Lab2_Sem4/app/controllers/: delete_dialog_controller.py  main_window_controller.py  search_dialog_controller.py
Lab2_Sem4/app/domain/: criteria.py  models.py  pagination.py  (+1 more)
Lab2_Sem4/data/: pet_records.sqlite3
Lab2_Sem4/sample_data/: pets_batch_1.xml  pets_batch_2.xml
Lab2_Sem4/tests/: conftest.py  test_pagination.py  test_repository.py  test_services.py  test_validators.py  test_xml_io.py
Lab3/Lab3_Sem4/: .gitignore  README.md  main.py  requirements-dev.txt  run_coverage.py
Lab3_Sem4/: .gitignore  README.md  main.py  requirements.txt  setup.cfg
Lab3_Sem4/configs/: entities.json  highscores.json  level1.json  settings.json
Lab3_Sem4/src/: game.py  hud.py  tilemap.py
Lab3_Sem4/tests/: test_animation.py  test_bonuses.py  test_camera.py  test_config_loader.py  test_enemies.py  test_entity.py  test_fireball.py  test_mario.py  test_scores_manager.py  test_tilemap.py
MarkovAlgProj/: CMakeLists.txt  main.cpp
MarkovAlgProj/Markov/: MarkovAlg.cpp  MarkovAlg.h  Rule.cpp  Rule.h  RuleParser.cpp  RuleParser.h  Tape.cpp  Tape.h  tests.cpp
RubikCubeProj/: CMakeLists.txt  main.cpp
RubikCubeProj/RubikCube/: RubikCube.cpp  RubikCube.h  test_rubikcube.cpp
(+73 files in other folders)
